# inventorio

./: .gitignore  manage.py  pyproject.toml
inventorio/: asgi.py  settings.py  urls.py  wsgi.py
inventory/: admin.py  models.py
inventory/migrations/: 0001_initial.py  0002_label_location_item_thumbnail_category_item_category_and_more.py  0003_alter_category_options_item_purchase_date_and_more.py  0004_item_receipt.py
