[tool.poetry]
name = "inventorio"
version = "0.1.0"
description = ""
authors = ["Øystein Riiser Gundersen <oysteinrg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django-unfold = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
